--- a/TODO.txt
+++ b/TODO.txt
@@ -19,3 +19,11 @@ TODO:
     代码压缩和压缩后模块加载与管理
 author maoshuyu 
 time 2012-11-4 2:23 am
+
+
+TODO:
+    照片分享功能
+author coocon 
+time 2012-11-20 2:23 am
+
+
